--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "async-mutex": "^0.4.1",
     "clsx": "^2.1.0",
     "next": "14.1.0",
+    "nprogress": "^0.2.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.49.3",
@@ -45,6 +46,7 @@
     "@storybook/react": "^7.6.11",
     "@storybook/test": "^7.6.11",
     "@types/node": "^20",
+    "@types/nprogress": "^0.2.3",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
