--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "sb:b": "storybook build"
   },
   "dependencies": {
+    "@fontsource/inter": "^5.0.16",
     "@hookform/resolvers": "^3.3.4",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-checkbox": "^1.0.4",
