--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint": "eslint --fix src/**/*.{tsx,ts,jsx,js} --no-error-on-unmatched-pattern && stylelint --fix src/{,*/}*.{scss,css} --allow-empty-input",
     "format": "prettier --write src",
     "sb": "storybook dev -p 6006",
-    "sb:b": "storybook build"
+    "sb:b": "storybook build",
+    "prepare": "husky"
   },
   "dependencies": {
     "@fontsource/inter": "^5.0.16",
