--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "eslint-plugin-storybook": "^0.6.15",
+    "husky": "^9.0.11",
     "sass": "^1.70.0",
     "storybook": "^7.6.11",
     "stylelint": "^16.1.0",
