--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@reduxjs/toolkit": "^2.1.0",
     "async-mutex": "^0.4.1",
     "clsx": "^2.1.0",
+    "cookies-next": "^4.1.1",
     "next": "14.1.0",
     "nprogress": "^0.2.0",
     "react": "^18",
