--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,3 @@
-REACT_APP_TEST=test
-REACT_APP_BASE_API_URL=https://test.domain.com/api
+BASE_API_URL=https://main.inctagram.fun/api/v1
+GITHUB_OAUTH2=https://main.inctagram.fun/api/v1/auth/github/login
+GOOGLE_OAUTH2=https://main.inctagram.fun/api/v1/auth/google/login
