IN-91 refactor: env

--- a/.env.production
+++ b/.env.production
@@ -1,1 +1,3 @@
-NEXT_PUBLIC_BACKEND_API='https://main.inctagram.fun/api/v1'
+NEXT_PUBLIC_BACKEND_API=https://main.inctagram.fun/api/v1
+NEXT_PUBLIC_GITHUB_OAUTH2=$NEXT_PUBLIC_BACKEND_API/auth/github/login
+NEXT_PUBLIC_GOOGLE_OAUTH2=$NEXT_PUBLIC_BACKEND_API/auth/google/login
