--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,3 @@
-BASE_API_URL=https://main.inctagram.fun/api/v1
-GITHUB_OAUTH2=https://main.inctagram.fun/api/v1/auth/github/login
-GOOGLE_OAUTH2=https://main.inctagram.fun/api/v1/auth/google/login
+NEXT_PUBLIC_BACKEND_API=https://main.inctagram.fun/api/v1
+NEXT_PUBLIC_GITHUB_OAUTH2=$NEXT_PUBLIC_BACKEND_API/auth/github/login
+NEXT_PUBLIC_GOOGLE_OAUTH2=$NEXT_PUBLIC_BACKEND_API/auth/google/login
