--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,5 @@
 REACT_APP_TEST=test
 REACT_APP_BASE_API_URL=https://test.domain.com/api
+NEXT_PUBLIC_BACKEND_API=https://main.inctagram.fun/api/v1
+NEXT_PUBLIC_GITHUB_OAUTH2=$NEXT_PUBLIC_BACKEND_API/auth/github/login
+NEXT_PUBLIC_GOOGLE_OAUTH2=$NEXT_PUBLIC_BACKEND_API/auth/google/login
