IN-90 refactor: changes after review

--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,4 @@
 NEXT_PUBLIC_BACKEND_API=https://main.inctagram.fun/api/v1
 NEXT_PUBLIC_GITHUB_OAUTH2=$NEXT_PUBLIC_BACKEND_API/auth/github/login
 NEXT_PUBLIC_GOOGLE_OAUTH2=$NEXT_PUBLIC_BACKEND_API/auth/google/login
+NEXT_PUBLIC_RECAPTCHA_SITEKEY=6Ldfw4IpAAAAAHgNgsniOZBWxLctU5f7143jjndt
