--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "nprogress": "^0.2.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-easy-crop": "^5.0.5",
+    "react-google-autocomplete": "^2.7.3",
     "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.49.3",
     "react-redux": "^9.1.0",
