--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "async-mutex": "^0.4.1",
     "clsx": "^2.1.0",
     "cookies-next": "^4.1.1",
+    "date-fns": "^3.3.1",
     "next": "14.1.0",
     "nprogress": "^0.2.0",
     "react": "^18",
+    "react-datepicker": "^6.2.0",
     "react-dom": "^18",
     "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.49.3",
@@ -52,6 +54,7 @@
     "@types/node": "^20",
     "@types/nprogress": "^0.2.3",
     "@types/react": "^18",
+    "@types/react-datepicker": "^6.0.3",
     "@types/react-dom": "^18",
     "@types/react-google-recaptcha": "^2.1.9",
     "eslint": "^8",
