--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-hook-form": "^7.49.3",
     "react-redux": "^9.1.0",
     "react-toastify": "^10.0.4",
+    "swiper": "^11.0.7",
     "zod": "^3.22.4"
   },
   "devDependencies": {
@@ -60,6 +61,7 @@
     "@types/react-datepicker": "^6.0.3",
     "@types/react-dom": "^18",
     "@types/react-google-recaptcha": "^2.1.9",
+    "@types/swiper": "^6.0.0",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "eslint-plugin-storybook": "^0.6.15",
