IN-138 refactor: types

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,9 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
+    "compilerOptions": {
+      "typeRoots": ["./node_modules/@types", "./types"]
+    },
     "paths": {
       "@/*": [
         "./src/*"
