--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,9 +16,6 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
-    "compilerOptions": {
-      "typeRoots": ["./node_modules/@types", "./types"]
-    },
     "paths": {
       "@/*": [
         "./src/*"
@@ -34,7 +31,8 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
-    ".next/types/**/*.ts"
+    ".next/types/**/*.ts",
+    "./types/inctagram.d.ts"
   ],
   "exclude": [
     "node_modules"
