--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "cookies-next": "^4.1.1",
     "date-fns": "^3.3.1",
     "next": "14.1.0",
+    "next-redux-wrapper": "^8.1.0",
     "nprogress": "^0.2.0",
     "react": "^18",
     "react-datepicker": "^6.2.0",
