--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@radix-ui/react-slider": "^1.1.2",
     "@radix-ui/react-tabs": "^1.0.4",
     "@reduxjs/toolkit": "^2.1.0",
+    "@types/ua-parser-js": "^0.7.39",
     "async-mutex": "^0.4.1",
     "clsx": "^2.1.0",
     "cookies-next": "^4.1.1",
@@ -41,6 +42,7 @@
     "react-redux": "^9.1.0",
     "react-toastify": "^10.0.4",
     "swiper": "^11.0.7",
+    "ua-parser-js": "^1.0.37",
     "zod": "^3.22.4"
   },
   "devDependencies": {
